--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body {
   box-sizing: border-box;
 }
 
+body {
+  max-width: 475px;
+  margin: auto;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -23,12 +28,33 @@ main {
   height: 75vh;
   position: relative;
 }
-main img {
+main .no-more {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .dog-image {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
+}
+main .stamp {
+  padding: 1.5rem 4rem;
+  font-size: 3rem;
+  text-transform: uppercase;
+  border: 5px solid #29d78a;
+  color: #29d78a;
+  position: absolute;
+  top: 46px;
+  left: 13px;
+  transform: rotate(-25deg);
+}
+main .red-stamp {
+  color: #f06957;
+  border: 5px solid #f06957;
 }
 main .dog-description {
   position: absolute;
@@ -54,4 +80,12 @@ main .dog-description h2 {
   border-radius: 100193px;
   width: 100px;
   height: 100px;
+  cursor: pointer;
+  background-color: unset;
+}
+
+@media (min-width: 550px) {
+  body {
+    background-color: lightcyan;
+  }
 }/*# sourceMappingURL=styles.css.map */
